added registerNewBoxes handler
